# rubo4e

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  justfile
benches/: json_perf.rs
docs/: README.md  architecture.md  ecosystem.md  generator.md  identifiers.md  serialization.md  testing.md  validation.md  versioning.md
examples/: builder.rs  serialize.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_deserialize_bilanzierung.rs  fuzz_deserialize_lastgang.rs  fuzz_deserialize_marktlokation.rs  fuzz_deserialize_rechnung.rs  fuzz_deserialize_vertrag.rs  fuzz_deserialize_zeitreihenwert.rs  fuzz_parse_identifiers.rs
generator/: Cargo.toml
generator/schemas/v202501.0.0/: ZusatzAttribut.json
generator/schemas/v202501.0.0/bo/: Angebot.json  Ausschreibung.json  Bilanzierung.json  Buendelvertrag.json  Energiemenge.json  Fremdkosten.json  Geraet.json  Geschaeftspartner.json  Kosten.json  Lastgang.json  Lokationszuordnung.json  Marktlokation.json  Marktteilnehmer.json  Messlokation.json  Netzlokation.json  Person.json  Preisblatt.json  PreisblattDienstleistung.json  PreisblattHardware.json  PreisblattKonzessionsabgabe.json  PreisblattMessung.json  PreisblattNetznutzung.json  Rechnung.json  Region.json  Regionaltarif.json  Standorteigenschaften.json  SteuerbareRessource.json  Tarif.json  Tarifinfo.json  Tarifkosten.json  Tarifpreisblatt.json  TechnischeRessource.json  Vertrag.json  Zaehler.json  Zeitreihe.json
generator/schemas/v202501.0.0/com/: Adresse.json  Angebotsposition.json  Angebotsteil.json  Angebotsvariante.json  AufAbschlag.json  AufAbschlagProOrt.json  AufAbschlagRegional.json  AufAbschlagstaffelProOrt.json  Ausschreibungsdetail.json  Ausschreibungslos.json  Betrag.json  Dienstleistung.json  Energieherkunft.json  Energiemix.json  Fremdkostenblock.json  Fremdkostenposition.json  Geokoordinaten.json  Katasteradresse.json  Konfigurationsprodukt.json  Kontaktweg.json  Konzessionsabgabe.json  Kostenblock.json  Kostenposition.json  KriteriumWert.json  Lastprofil.json  MarktgebietInfo.json  Menge.json  PositionsAufAbschlag.json  Preis.json  Preisgarantie.json  Preisposition.json  Preisstaffel.json  Rechnungsposition.json  RegionaleGueltigkeit.json  RegionalePreisgarantie.json  RegionalePreisstaffel.json  RegionaleTarifpreisposition.json  RegionalerAufAbschlag.json  Regionskriterium.json  Sigmoidparameter.json  (+20 more)
generator/schemas/v202501.0.0/enum/: Abwicklungsmodell.json  Aggregationsverantwortung.json  Anrede.json  ArithmetischeOperation.json  ArtikelId.json  Ausschreibungsportal.json  Befestigungsart.json  Bemessungsgroesse.json  Bilanzierungsmethode.json  BoTyp.json  ComTyp.json  Dienstleistungstyp.json  Geschaeftspartnerrolle.json  Gueltigkeitstyp.json  Kalkulationsmethode.json  Kundengruppe.json  Marktrolle.json  Mengeneinheit.json  Messgroesse.json  Messwerterfassung.json  Messwertstatus.json  Netzebene.json  Oekolabel.json  Oekozertifikat.json  Organisationstyp.json  Preisgarantietyp.json  Preismodell.json  Preisstatus.json  Preistyp.json  Profilart.json  Profilverfahren.json  Prognosegrundlage.json  Rechnungslegung.json  Regionskriteriumtyp.json  Sparte.json  Speicherart.json  Steuerkennzeichen.json  Tarifkalkulationsmethode.json  Tarifregionskriterium.json  TechnischeRessourceNutzung.json  (+10 more)
generator/schemas/v202607.0.0/: ZusatzAttribut.json
generator/schemas/v202607.0.0/bo/: Angebot.json  Ausschreibung.json  Bilanzierung.json  Buendelvertrag.json  Energiemenge.json  Fremdkosten.json  Geraet.json  Geschaeftspartner.json  Kosten.json  Lastgang.json  Lokationszuordnung.json  Marktlokation.json  Marktteilnehmer.json  Messlokation.json  Netzlokation.json  Person.json  Preisblatt.json  PreisblattDienstleistung.json  PreisblattHardware.json  PreisblattKonzessionsabgabe.json  PreisblattMessung.json  PreisblattNetznutzung.json  Rechnung.json  Region.json  Standorteigenschaften.json  SteuerbareRessource.json  Tarif.json  Tarifinfo.json  Tarifkosten.json  Tarifpreisblatt.json  TechnischeRessource.json  Vertrag.json  Zaehler.json  Zaehlzeitdefinition.json  Zeitreihe.json
generator/schemas/v202607.0.0/com/: Adresse.json  Angebotsposition.json  Angebotsteil.json  Angebotsvariante.json  AufAbschlag.json  Ausschreibungsdetail.json  Ausschreibungslos.json  Betrag.json  Dienstleistung.json  EinheitsPreisposition.json  Energieherkunft.json  Energiemix.json  Fremdkostenblock.json  Fremdkostenposition.json  Geokoordinaten.json  Katasteradresse.json  Konfigurationsprodukt.json  Kontaktweg.json  Konzessionsabgabe.json  Kostenblock.json  Kostenposition.json  Lastprofil.json  LastvariablePreisposition.json  MarktgebietInfo.json  Menge.json  Messwert.json  Preis.json  Preisgarantie.json  Preisposition.json  Preisstaffel.json  Rechnungsposition.json  Regionsoperation.json  Regionspreis.json  Regionszeitscheibe.json  RelativePreisposition.json  Sigmoidparameter.json  StandorteigenschaftenGas.json  StandorteigenschaftenStrom.json  Steuerbetrag.json  Tagesparameter.json  (+20 more)
generator/schemas/v202607.0.0/enum/: Ausschreibungsstatus.json  Ausschreibungstyp.json  BoTyp.json  ComTyp.json  EMobilitaetsart.json  Fallgruppenzuordnung.json  Gasqualitaet.json  Geraeteklasse.json  Geraetetyp.json  Kontaktart.json  KundengruppeKA.json  Lokationstyp.json  Messwertstatuszusatz.json  Operator.json  Preisreferenz.json  Profiltyp.json  Rechnungsstatus.json  Rechnungstyp.json  Regionskriterium.json  Registeranzahl.json  Steuerart.json  SteuerkanalLeistungsbeschreibung.json  Titel.json  Vertragsstatus.json  Waermenutzung.json  WahlrechtPrognosegrundlage.json  Wiederholungstyp.json  Zaehlergroesse.json  Zahlungsart.json  Zeitreihentyp.json
generator/src/: ast.rs  emitter.rs  inference.rs  lib.rs  main.rs  parser.rs
generator/tests/: round_trip.rs
generator/tests/snapshots/: v202501_menge.rs  v202607_menge.rs
scripts/: check_codegen_size.sh  check_docs_drift.sh  check_json_perf_regression.sh  download_schemas.sh
src/: convenience.rs  error.rs  lib.rs  schema_helpers.rs  time_serde.rs
tests/: any_bo.rs  builder.rs  compat.rs  golden.rs  module_coverage.rs  proptest_roundtrips.rs  (+7 more)
(+51 files in other folders)
